[gd_scene load_steps=13 format=3 uid="uid://bh3w6vfy7f2j7"]

[ext_resource type="Script" path="res://UI/player_status_panel.gd" id="1_rwxpg"]
[ext_resource type="Texture2D" uid="uid://dn8jr04wd88xl" path="res://assets/Assets/Base-01.png" id="2_hqmu7"]
[ext_resource type="Texture2D" uid="uid://tty0nae58ms6" path="res://assets/Player/char_blue_1.png" id="3_nph2b"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kqduh"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
texture = ExtResource("2_hqmu7")
region_rect = Rect2(323, 203, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5sv3"]
atlas = ExtResource("3_nph2b")
region = Rect2(22, 24, 11, 11)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_kko73"]
load_path = "res://.godot/imported/Base-01.png-b1aec88863619de0f4a0b505e8d4c36f.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_og6sv"]
atlas = SubResource("CompressedTexture2D_kko73")
region = Rect2(307, 21, 58, 6)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_txmsw"]
load_path = "res://.godot/imported/Base-01.png-b1aec88863619de0f4a0b505e8d4c36f.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_yg1uf"]
atlas = SubResource("CompressedTexture2D_txmsw")
region = Rect2(308, 118, 56, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_ryxbf"]
atlas = ExtResource("2_hqmu7")
region = Rect2(308, 86, 56, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_cpgom"]
atlas = SubResource("CompressedTexture2D_kko73")
region = Rect2(307, 6, 58, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkjf3"]
atlas = SubResource("CompressedTexture2D_txmsw")
region = Rect2(308, 39, 56, 2)

[node name="status_panel" type="HBoxContainer"]
script = ExtResource("1_rwxpg")

[node name="AvatarBox" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_kqduh")

[node name="Avatar" type="TextureRect" parent="AvatarBox"]
layout_mode = 2
texture = SubResource("AtlasTexture_v5sv3")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="HealthBox" type="TextureProgressBar" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
max_value = 1.0
step = 0.0
texture_over = SubResource("AtlasTexture_og6sv")
texture_progress = SubResource("AtlasTexture_yg1uf")
texture_progress_offset = Vector2(1, 1)

[node name="EaseHealthBox" type="TextureProgressBar" parent="VBoxContainer/HealthBox"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = -3.0
offset_right = 29.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.0
texture_progress = SubResource("AtlasTexture_ryxbf")
texture_progress_offset = Vector2(1, 1)

[node name="EnergyBox" type="TextureProgressBar" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
max_value = 1.0
step = 0.0
texture_over = SubResource("AtlasTexture_cpgom")
texture_progress = SubResource("AtlasTexture_fkjf3")
texture_progress_offset = Vector2(1, 1)
